src/app-deploy.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: textanalytics
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: textanalytics-deployment
        version: v1
    spec:
      containers:
        - name: textanalytics
          image: nathaliepett/textanalytics
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: textanalytics-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  type: NodePort
  selector:
    name: textanalytics-deployment
