src/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: textanalytics-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: textanalytics-service
          servicePort: 5000
